# tgfmt

./: README.md  pyproject.toml
src/tgfmt/: exceptions.py  interval.py  intervaltier.py  mlf.py  point.py  pointtier.py  textgrid.py  textgrid_data.py  utils.py
tests/: test_textgrid.py
